# PrivacyHUD

./: PrivacyHUD.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_monitor.rs  killswitch.rs  lib.rs  main.rs  state.rs  tray.rs  video_monitor.rs
src/components/: HudDot.tsx  SettingsPanel.tsx
src/hooks/: useDeviceStatus.ts
src/styles/: hud.css
